--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -94,7 +94,7 @@
 
     <app-header-layout>
 
-        <app-header fixed effects="waterfall fade-background" scalar="0.6">
+        <app-header fixed effects="waterfall fade-background">
             <app-toolbar>
                 <paper-icon-button icon="menu" drawer-toggle></paper-icon-button>
                 <h1 main-title>{{ site.name }}</h1>
