--- a/res/css/import/_variables.scss
+++ b/res/css/import/_variables.scss
@@ -15,3 +15,7 @@ $text-color-secondary: rgba($color-black, 0.54);
 $text-color-primary-inverse: $color-white;
 $text-color-secondary-inverse: rgba($color-white, 0.7);
 $text-link-color: $color-accent !default;
+
+/* Footer colors */
+$footer-background: $palette-grey-100;
+$footer-color: rgba($color-black, 0.54);
