--- a/res/css/import/_typography.scss
+++ b/res/css/import/_typography.scss
@@ -13,8 +13,8 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
-@import "import/_variables";
-@import "import/_mixins";
+@import "variables";
+@import "mixins";
 
 html, body {
     font-family: $body-performance-font;
