--- a/res/css/import/mixins/_typography.scss
+++ b/res/css/import/mixins/_typography.scss
@@ -21,7 +21,7 @@
 }
 
 @mixin typo-display-4($colorContrast: false, $usePreferred: true) {
-    @include typo-preferred-font($usePreferred);
+    font-family: $header-font;
     font-size: 112px;
     font-weight: 300;
     line-height: 1;
@@ -33,7 +33,7 @@
 }
 
 @mixin typo-display-3($colorContrast: false, $usePreferred: true) {
-    @include typo-preferred-font($usePreferred);
+    font-family: $header-font;
     font-size: 56px;
     font-weight: 400;
     line-height: 1.35;
@@ -45,7 +45,7 @@
 }
 
 @mixin typo-display-2($colorContrast: false, $usePreferred: true) {
-    @include typo-preferred-font($usePreferred);
+    font-family: $header-font;
     font-size: 45px;
     font-weight: 400;
     line-height: 48px;
@@ -56,7 +56,7 @@
 }
 
 @mixin typo-display-1($colorContrast: false, $usePreferred: true) {
-    @include typo-preferred-font($usePreferred);
+    font-family: $header-font;
     font-size: 34px;
     font-weight: 400;
     line-height: 40px;
@@ -67,7 +67,7 @@
 }
 
 @mixin typo-headline($colorContrast: false, $usePreferred: true) {
-    @include typo-preferred-font($usePreferred);
+    font-family: $header-font;
     font-size: 24px;
     font-weight: 400;
     line-height: 32px;
@@ -79,7 +79,7 @@
 }
 
 @mixin typo-title($colorContrast: false, $usePreferred: true) {
-    @include typo-preferred-font($usePreferred);
+    font-family: $header-font;
     font-size: 20px;
     font-weight: 500;
     line-height: 1;
@@ -192,7 +192,7 @@
 }
 
 @mixin typo-button($colorContrast: false, $usePreferred: true) {
-    @include typo-preferred-font($usePreferred);
+    font-family: $header-font;
     font-size: 14px;
     font-weight: 500;
     text-transform: uppercase;
