--- a/res/css/styles.css
+++ b/res/css/styles.css
@@ -18,6 +18,7 @@
 /* colors.scss */
 /* Typography */
 /* Colors */
+/* Footer colors */
 /**
  * Copyright 2015 Google Inc. All Rights Reserved.
  *
@@ -131,6 +132,7 @@
 /* colors.scss */
 /* Typography */
 /* Colors */
+/* Footer colors */
 /*
  * What follows is the result of much research on cross-browser styling.
  * Credit left inline and big thanks to Nicolas Gallagher, Jonathan Neal,
@@ -402,6 +404,228 @@ blockquote {
     content: none !important; }
   blockquote:after {
     content: none !important; }
+
+/**
+ * Copyright 2015 Google Inc. All Rights Reserved.
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *      http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
+/**
+ * Copyright 2015 Google Inc. All Rights Reserved.
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *      http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
+/* ==========  Color Palettes  ========== */
+/* colors.scss */
+/* Typography */
+/* Colors */
+/* Footer colors */
+/**
+ * Copyright 2015 Google Inc. All Rights Reserved.
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *      http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
+/* Variables */
+/**
+ * Copyright 2015 Google Inc. All Rights Reserved.
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *      http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
+/* Variables */
+/**
+ * Copyright 2015 Google Inc. All Rights Reserved.
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *      http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
+html, body {
+    font-family: "Georgia", "Times New Roman", serif;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 20px;
+}
+
+h1, h2, h3, h4, h5, h6, p {
+    margin: 0;
+    padding: 0;
+}
+
+/**
+* Styles for HTML elements
+*/
+h1 small, h2 small, h3 small, h4 small, h5 small, h6 small {
+    font-family: "Poppins", "Roboto", "Helvetica", "Arial", sans-serif;
+    font-size: 56px;
+    font-weight: 400;
+    line-height: 1.35;
+    letter-spacing: -0.02em;
+    opacity: 0.54;
+    font-size: 0.6em;
+}
+
+h1 {
+    font-family: "Poppins", "Roboto", "Helvetica", "Arial", sans-serif;
+    font-size: 56px;
+    font-weight: 400;
+    line-height: 1.35;
+    letter-spacing: -0.02em;
+    margin-top: 24px;
+    margin-bottom: 24px;
+}
+
+h2 {
+    font-family: "Poppins", "Roboto", "Helvetica", "Arial", sans-serif;
+    font-size: 45px;
+    font-weight: 400;
+    line-height: 48px;
+    margin-top: 24px;
+    margin-bottom: 24px;
+}
+
+h3 {
+    font-family: "Poppins", "Roboto", "Helvetica", "Arial", sans-serif;
+    font-size: 34px;
+    font-weight: 400;
+    line-height: 40px;
+    margin-top: 24px;
+    margin-bottom: 24px;
+}
+
+h4 {
+    font-family: "Poppins", "Roboto", "Helvetica", "Arial", sans-serif;
+    font-size: 24px;
+    font-weight: 400;
+    line-height: 32px;
+    -moz-osx-font-smoothing: grayscale;
+    margin-top: 24px;
+    margin-bottom: 16px;
+}
+
+h5 {
+    font-family: "Poppins", "Roboto", "Helvetica", "Arial", sans-serif;
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 1;
+    letter-spacing: 0.02em;
+    margin-top: 24px;
+    margin-bottom: 16px;
+}
+
+h6 {
+    font-family: "Kreon", "Georgia", "Times New Roman", serif;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 24px;
+    letter-spacing: 0.04em;
+    margin-top: 24px;
+    margin-bottom: 16px;
+}
+
+p {
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 24px;
+    letter-spacing: 0;
+    margin-bottom: 16px;
+}
+
+a {
+    color: #dd1155;
+    font-weight: 500;
+}
+
+blockquote {
+    font-family: "Kreon", "Georgia", "Times New Roman", serif;
+    position: relative;
+    font-size: 24px;
+    font-weight: 300;
+    font-style: italic;
+    line-height: 1.35;
+    letter-spacing: 0.08em;
+}
+
+blockquote:before {
+    position: absolute;
+    left: -0.5em;
+    content: 'ÔÇ£';
+}
+
+blockquote:after {
+    content: 'ÔÇØ';
+    margin-left: -0.05em;
+}
+
+mark {
+    background-color: #f4ff81;
+}
+
+dt {
+    font-weight: 700;
+}
+
+address {
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 1;
+    letter-spacing: 0;
+    font-style: normal;
+}
+
+ul, ol {
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 24px;
+    letter-spacing: 0;
+}
 
 /* http://prismjs.com/download.html?themes=prism&languages=markup+css+clike+javascript+apacheconf+bash+c+cpp+ruby+css-extras+diff+git+groovy+handlebars+java+json+kotlin+latex+markdown+php+php-extras+python+scss+sql&plugins=line-highlight+autolinker+wpd+file-highlight+previewer-base+previewer-color+previewer-gradient+previewer-easing+previewer-time+previewer-angle */
 /**
@@ -853,10 +1077,18 @@ paper-button {
 }
 
 a[tabindex="-1"] {
-    text-decoration: none;
-    color: inherit;
+    text-decoration: none !important;
+    color: inherit !important;
 }
 
+/* Grid */
+.app-grid {
+    max-width: 1200px;
+    width: calc(100% - 32px);
+    margin: 0 auto;
+}
+
+/* Layout */
 app-drawer-layout app-header-layout app-header {
     background-color: #212121;
 }
@@ -870,21 +1102,32 @@ app-drawer-layout app-header-layout app-header app-toolbar {
 }
 
 app-drawer-layout app-header-layout app-header app-toolbar h1 {
-    font-family: "Kreon", "Georgia", "Times New Roman", serif;
+    font-family: "Poppins", "Roboto", "Helvetica", "Arial", sans-serif;
     font-size: 20px;
     font-weight: 500;
     line-height: 1;
     letter-spacing: 0.02em;
 }
+
+app-drawer-layout app-header-layout app-header app-toolbar paper-button {
+    font-family: "Poppins", "Roboto", "Helvetica", "Arial", sans-serif;
+    font-size: 14px;
+    font-weight: 500;
+    text-transform: uppercase;
+    line-height: 1;
+    letter-spacing: 0;
+    min-width: 0;
+}
 app-drawer-layout app-header-layout .content {
     margin-top: -64px;
 }
 app-drawer-layout app-drawer {
-    box-shadow: 0 8px 10px -5px rgba(0, 0, 0, 0.2), 0 16px 24px 2px rgba(0, 0, 0, 0.14), 0 6px 30px 5px rgba(0, 0, 0, 0.12);
-  z-index: 16; }
+    box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2), 0 8px 10px 1px rgba(0, 0, 0, 0.14), 0 3px 14px 2px rgba(0, 0, 0, 0.12);
+    z-index: 8;
+}
 
 app-drawer-layout app-drawer app-toolbar h1 {
-    font-family: "Kreon", "Georgia", "Times New Roman", serif;
+    font-family: "Poppins", "Roboto", "Helvetica", "Arial", sans-serif;
     font-size: 20px;
     font-weight: 500;
     line-height: 1;
@@ -898,45 +1141,6 @@ app-drawer-layout app-drawer app-toolbar h1 {
 .page-index app-drawer-layout app-header-layout app-header #backgroundRearLayer {
     background: #212121;
 }
-
-h1, h2, h3, .mdl-typography--display-1, .mdl-typography--display-2, .mdl-typography--display-3,
-.mdl-typography--display-4, .mdl-typography--display-5 {
-  font-family: "Poppins", "Roboto", "Helvetica", "Arial", sans-serif;
-  font-weight: 600; }
-
-.mdl-button {
-  font-family: "Poppins", "Roboto", "Helvetica", "Arial", sans-serif;
-  font-weight: 600; }
-
-body, .mdl-typography--headline, .mdl-typography--subhead {
-  font-weight: 300; }
-
-.mdl-typography--subhead {
-  font-size: 17px; }
-
-.mdl-layout-title {
-  font-family: "Poppins", "Roboto", "Helvetica", "Arial", sans-serif; }
-
-/* Layout */
-.mdl-layout__drawer, .mdl-layout__obfuscator {
-  position: fixed; }
-
-.mdl-layout__drawer-button > i {
-  position: relative;
-  top: 2px; }
-
-/* Navigation */
-.mdl-navigation__link.mdl-button {
-  line-height: 38px;
-  min-width: 0;
-  margin: 0 8px;
-  padding: 0 16px; }
-
-.mdl-navigation__link.mdl-button--icon {
-  font-size: 20px;
-  line-height: 32px;
-  min-width: 0;
-  padding: 8px; }
 
 /* Cover */
 .cover {
@@ -982,12 +1186,6 @@ body, .mdl-typography--headline, .mdl-typography--subhead {
         font-size: 96px;
         line-height: 96px;
         color: white; }
-
-/* Grid */
-.mdl-grid {
-  max-width: 1200px;
-  width: calc(100% - 32px);
-  margin: 0 auto; }
 
 /* Philosophy section */
 .philosophy > .philosophy-cell {
