--- a/res/css/import/mixins/_typography.scss
+++ b/res/css/import/mixins/_typography.scss
@@ -14,6 +14,38 @@
  * limitations under the License.
  */
 
+@mixin typo-weight-black {
+    font-weight: 500;
+}
+
+@mixin typo-weight-thin {
+    font-weight: 200 !important;
+}
+
+@mixin typo-weight-light {
+    font-weight: 300 !important;
+}
+
+@mixin typo-weight-regular {
+    font-weight: 400 !important;
+}
+
+@mixin typo-weight-medium {
+    font-weight: 500 !important;
+}
+
+@mixin typo-weight-bold {
+    font-weight: 700 !important;
+}
+
+@mixin typo-weight-black {
+    font-weight: 900 !important;
+}
+
+@mixin typo-capitalize {
+    font-weight: 900 !important;
+}
+
 @mixin typo-preferred-font($usePreferred: true) {
     @if $usePreferred {
         font-family: $body-font;
@@ -192,6 +224,7 @@
 }
 
 @mixin typo-button($colorContrast: false, $usePreferred: true) {
+    @include typo-weight-medium;
     font-family: $header-font;
     font-size: 14px;
     font-weight: 500;
@@ -202,36 +235,4 @@
     @if $colorContrast {
         opacity: 0.87;
     }
-}
-
-@mixin typo-weight-black {
-    font-weight: 500;
-}
-
-@mixin typo-weight-thin {
-    font-weight: 200 !important;
-}
-
-@mixin typo-weight-light {
-    font-weight: 300 !important;
-}
-
-@mixin typo-weight-regular {
-    font-weight: 400 !important;
-}
-
-@mixin typo-weight-medium {
-    font-weight: 500 !important;
-}
-
-@mixin typo-weight-bold {
-    font-weight: 700 !important;
-}
-
-@mixin typo-weight-black {
-    font-weight: 900 !important;
-}
-
-@mixin typo-capitalize {
-    font-weight: 900 !important;
 }
