--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -83,9 +83,14 @@
                 <paper-icon-item>
                     <iron-icon icon="{{ navigation.icon }}" item-icon></iron-icon>
                     {{ navigation.title }}
+
+                    <paper-ripple></paper-ripple>
                 </paper-icon-item>
                 {% else %}
-                <paper-item>{{ navigation.title }}</paper-item>
+                <paper-item>
+                    {{ navigation.title }}
+                    <paper-ripple></paper-ripple>
+                </paper-item>
                 {% endif %}
             </a>
             {% endfor %}
@@ -102,7 +107,7 @@
                     {% for navigation in site.data.navigation.items %}
                     <a href="{{ navigation.link }}" tabindex="-1" target="_blank" title="{{ navigation.title }}">
                         {% if navigation.icon %}
-                        <paper-icon-button icon="{{ navigation.icon }}"></paper-icon-button>
+                        <paper-icon-button-light icon="{{ navigation.icon }}"></paper-icon-button-light>
                         {% else %}
                         <paper-button>{{ navigation.title }}</paper-button>
                         {% endif %}
