--- a/res/css/styles.css
+++ b/res/css/styles.css
@@ -563,9 +563,9 @@ h4 {
 h5 {
     font-family: "Poppins", "Roboto", "Helvetica", "Arial", sans-serif;
     font-size: 20px;
-    font-weight: 500;
+    font-weight: 600;
     line-height: 1;
-    letter-spacing: 0.02em;
+    letter-spacing: 0.01em;
     margin-top: 24px;
     margin-bottom: 16px;
 }
@@ -578,6 +578,14 @@ h6 {
     letter-spacing: 0.04em;
     margin-top: 24px;
     margin-bottom: 16px;
+}
+
+[main-title] {
+    font-family: "Poppins", "Roboto", "Helvetica", "Arial", sans-serif;
+    font-size: 20px;
+    font-weight: 600;
+    line-height: 1;
+    letter-spacing: 0.01em;
 }
 
 p {
@@ -596,6 +604,10 @@ a {
 a[tabindex="-1"] {
     text-decoration: none !important;
     color: inherit !important;
+}
+
+a[tabindex="-1"]:active, a[tabindex="-1"]:hover, a[tabindex="-1"]:focus {
+    text-decoration: none !important;
 }
 
 blockquote {
@@ -1112,14 +1124,13 @@ app-drawer-layout app-header-layout app-header #backgroundRearLayer, app-drawer-
 
 app-drawer-layout app-header-layout app-header app-toolbar {
     color: white;
+    font-size: 18px;
+    padding-top: 1px;
+    box-sizing: border-box;
 }
 
-app-drawer-layout app-header-layout app-header app-toolbar h1 {
-    font-family: "Poppins", "Roboto", "Helvetica", "Arial", sans-serif;
-    font-size: 20px;
-    font-weight: 500;
-    line-height: 1;
-    letter-spacing: 0.02em;
+app-drawer-layout app-header-layout app-header app-toolbar [main-title] {
+    font-size: 22px;
 }
 
 app-drawer-layout app-header-layout app-header app-toolbar paper-button {
@@ -1132,6 +1143,11 @@ app-drawer-layout app-header-layout app-header app-toolbar paper-button {
     letter-spacing: 0;
     min-width: 0;
 }
+
+app-drawer-layout app-header-layout app-header app-toolbar paper-icon-button, app-drawer-layout app-header-layout app-header app-toolbar paper-icon-button-light {
+    position: relative;
+    top: -1px;
+}
 app-drawer-layout app-header-layout .content {
     margin-top: -64px;
 }
@@ -1143,9 +1159,9 @@ app-drawer-layout app-drawer {
 app-drawer-layout app-drawer app-toolbar h1 {
     font-family: "Poppins", "Roboto", "Helvetica", "Arial", sans-serif;
     font-size: 20px;
-    font-weight: 500;
+    font-weight: 600;
     line-height: 1;
-    letter-spacing: 0.02em;
+    letter-spacing: 0.01em;
 }
 
 .page-index app-drawer-layout app-header-layout app-header {
@@ -1161,45 +1177,24 @@ app-drawer-layout app-drawer app-toolbar h1 {
   position: relative;
   background: no-repeat local center center;
   background-size: cover;
-  min-height: 400px;
+    min-height: 600px;
   height: 100vh;
-  text-align: center;
   box-shadow: inset 0 -8px 10px 1px rgba(0, 0, 0, 0.14), inset 0 -3px 14px 2px rgba(0, 0, 0, 0.12), inset 0 -5px 5px -3px rgba(0, 0, 0, 0.2);
+    padding-top: 64px;
   margin-bottom: 32px; }
-  .cover > .cover-inner {
+
+.cover .cover-inner {
     position: absolute;
     top: 50%;
     width: 100%;
     transform: translateY(-50%);
-    color: rgba(255, 255, 255, 0.7); }
-    .cover > .cover-inner > h1 {
-      text-decoration: none;
-      color: white;
-      font-weight: 500; }
-      .cover > .cover-inner > h1 a {
-        text-decoration: none;
-        color: white; }
-    .cover > .cover-inner > p a {
-      text-decoration: none;
-      color: rgba(255, 255, 255, 0.7);
-      font-weight: 400;
-      font-style: italic; }
-      .cover > .cover-inner > p a.mdl-button {
-        color: white;
-        font-weight: 500;
-        font-style: normal; }
-    .cover > .cover-inner > p i.material-icons {
-      position: relative;
-      top: 0.15em; }
-    .cover > .cover-inner > .mdl-button--icon {
-      width: 96px;
-      height: 96px; }
-      .cover > .cover-inner > .mdl-button--icon i.material-icons {
-        transform: translate(-48px, -44px);
-        text-align: center;
-        font-size: 96px;
-        line-height: 96px;
-        color: white; }
+    color: rgba(0, 0, 0, 0.54);
+    text-align: center;
+}
+
+.cover .cover-inner h1 {
+    color: rgba(0, 0, 0, 0.87);
+}
 
 /* Philosophy section */
 .philosophy > .philosophy-cell {
