--- a/res/css/styles.scss
+++ b/res/css/styles.scss
@@ -64,14 +64,22 @@ app-drawer-layout {
 
             app-toolbar {
                 color: $text-color-primary-inverse;
+                font-size: 18px;
+                padding-top: 1px;
+                box-sizing: border-box;
 
-                h1 {
-                    @include typo-title;
+                [main-title] {
+                    font-size: 22px;
                 }
 
                 paper-button {
                     @include typo-button;
                     min-width: 0;
+                }
+
+                paper-icon-button, paper-icon-button-light {
+                    position: relative;
+                    top: -1px;
                 }
             }
         }
@@ -116,55 +124,29 @@ app-drawer-layout {
     position: relative;
     background: no-repeat local center center;
     background-size: cover;
-    min-height: 400px;
+    min-height: 600px;
     height: 100vh;
-    text-align: center;
-    box-shadow: inset 0 -8px 10px 1px rgba($color-black, .14), inset 0 -3px 14px 2px rgba($color-black, .12), inset 0 -5px 5px -3px rgba($color-black, .2);
+    box-shadow: inset 0 -8px 10px 1px rgba($color-black, .14),
+    inset 0 -3px 14px 2px rgba($color-black, .12),
+    inset 0 -5px 5px -3px rgba($color-black, .2);
+    padding-top: 64px;
     margin-bottom: 32px;
 
-    > .cover-inner {
+    .cover-inner {
         position: absolute;
         top: 50%;
         width: 100%;
         transform: translateY(-50%);
-        color: rgba($color-white, .7);
-        > h1 {
-            text-decoration: none;
-            color: $color-white;
-            font-weight: 500;
-            a {
-                text-decoration: none;
-                color: $color-white;
-            }
+        color: $text-color-secondary;
+        text-align: center;
+
+        h1 {
+            color: $text-color-primary;
         }
-        > p {
-            a {
-                text-decoration: none;
-                color: rgba($color-white, .7);
-                font-weight: 400;
-                font-style: italic;
-                &.mdl-button {
-                    color: $color-white;
-                    font-weight: 500;
-                    font-style: normal;
-                }
-            }
-            i.material-icons {
-                position: relative;
-                top: 0.15em;
-            }
-        }
-        > .mdl-button--icon {
-            width: 96px;
-            height: 96px;
-            i.material-icons {
-                transform: translate(-48px, -44px);
-                text-align: center;
-                font-size: 96px;
-                line-height: 96px;
-                color: $color-white;
-            }
-        }
+    }
+
+    paper-icon-button, paper-icon-button-light {
+        //TODO increase size
     }
 }
 
