--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -107,7 +107,7 @@
                     {% for navigation in site.data.navigation.items %}
                     <a href="{{ navigation.link }}" tabindex="-1" target="_blank" title="{{ navigation.title }}">
                         {% if navigation.icon %}
-                        <paper-icon-button-light icon="{{ navigation.icon }}"></paper-icon-button-light>
+                        <paper-icon-button icon="{{ navigation.icon }}"></paper-icon-button>
                         {% else %}
                         <paper-button>{{ navigation.title }}</paper-button>
                         {% endif %}
