--- a/res/css/styles.scss
+++ b/res/css/styles.scss
@@ -77,7 +77,7 @@ app-drawer-layout {
                     min-width: 0;
                 }
 
-                paper-icon-button, paper-icon-button-light {
+                paper-icon-button {
                     position: relative;
                     top: -1px;
                 }
@@ -137,22 +137,22 @@ app-drawer-layout {
         top: 50%;
         width: 100%;
         transform: translateY(-50%);
-        color: $text-color-secondary;
+        color: $text-color-secondary-inverse;
         text-align: center;
 
         h1 {
-            color: $text-color-primary;
+            color: $text-color-primary-inverse;
         }
     }
 
-    paper-icon-button, paper-icon-button-light {
+    paper-icon-button {
         //TODO increase size
     }
 }
 
-/* Philosophy section */
-.philosophy {
-    > .philosophy-cell {
+/* Services section */
+.services {
+    > .mdl-cell {
         text-align: center;
     }
 }
