--- a/res/css/styles.scss
+++ b/res/css/styles.scss
@@ -99,6 +99,12 @@ app-drawer-layout {
                 @include typo-title();
             }
         }
+
+        .narrow {
+            paper-button, paper-icon-button {
+                display: none;
+            }
+        }
     }
 }
 
