--- a/res/css/styles.scss
+++ b/res/css/styles.scss
@@ -75,6 +75,7 @@ app-drawer-layout {
                 paper-button {
                     @include typo-button;
                     min-width: 0;
+                    font-size: 18px;
                 }
 
                 paper-icon-button {
@@ -148,6 +149,10 @@ app-drawer-layout {
 
         h1 {
             color: $text-color-primary-inverse;
+        }
+
+        paper-button {
+            background: $color-primary;
         }
     }
 
