--- a/res/css/styles.scss
+++ b/res/css/styles.scss
@@ -109,7 +109,7 @@ app-drawer-layout {
     }
 
     &.narrow app-header-layout app-header app-toolbar {
-        paper-button, paper-icon-button {
+        paper-button, paper-icon-button:not([drawer-toggle]) {
             display: none;
         }
     }
