--- a/res/css/styles.css
+++ b/res/css/styles.css
@@ -1124,7 +1124,6 @@ app-drawer-layout app-drawer {
     letter-spacing: 0.01em; }
   app-drawer-layout app-drawer .narrow paper-button, app-drawer-layout app-drawer .narrow paper-icon-button {
     display: none; }
-
 app-drawer-layout.narrow app-header-layout app-header app-toolbar paper-button, app-drawer-layout.narrow app-header-layout app-header app-toolbar paper-icon-button:not([drawer-toggle]) {
     display: none;
 }
@@ -1146,18 +1145,28 @@ app-drawer-layout:not(.narrow) app-drawer app-toolbar {
   height: 100vh;
   box-shadow: inset 0 -8px 10px 1px rgba(0, 0, 0, 0.14), inset 0 -3px 14px 2px rgba(0, 0, 0, 0.12), inset 0 -5px 5px -3px rgba(0, 0, 0, 0.2);
   padding-top: 64px;
-  margin-bottom: 32px; }
+    margin-bottom: 32px;
+    text-align: center;
+}
   .cover .cover-inner {
     position: absolute;
     top: 50%;
     width: 100%;
     transform: translateY(-50%);
-    color: rgba(255, 255, 255, 0.7);
-    text-align: center; }
-    .cover .cover-inner h1 {
+      color: rgba(255, 255, 255, 0.7);
+  }
+
+.cover .cover-inner h1, .cover .cover-inner paper-button {
       color: white; }
     .cover .cover-inner paper-button {
       background: #212121; }
+
+.cover paper-icon-button {
+    position: absolute;
+    bottom: 16px;
+    width: 96px;
+    height: 96px;
+}
 
 /* Services section */
 .services > .mdl-cell {
