--- a/res/css/styles.scss
+++ b/res/css/styles.scss
@@ -147,6 +147,7 @@ app-drawer-layout {
     inset 0 -5px 5px -3px rgba($color-black, .2);
     padding-top: 64px;
     margin-bottom: 32px;
+    text-align: center;
 
     .cover-inner {
         position: absolute;
@@ -154,9 +155,8 @@ app-drawer-layout {
         width: 100%;
         transform: translateY(-50%);
         color: $text-color-secondary-inverse;
-        text-align: center;
 
-        h1 {
+        h1, paper-button {
             color: $text-color-primary-inverse;
         }
 
@@ -166,7 +166,10 @@ app-drawer-layout {
     }
 
     paper-icon-button {
-        //TODO increase size
+        position: absolute;
+        bottom: 16px;
+        width: 96px;
+        height: 96px;
     }
 }
 
