--- a/res/css/styles.css
+++ b/res/css/styles.css
@@ -1143,6 +1143,7 @@ app-drawer-layout:not(.narrow) app-drawer app-toolbar {
   background-size: cover;
   min-height: 600px;
   height: 100vh;
+    box-sizing: border-box;
   box-shadow: inset 0 -8px 10px 1px rgba(0, 0, 0, 0.14), inset 0 -3px 14px 2px rgba(0, 0, 0, 0.12), inset 0 -5px 5px -3px rgba(0, 0, 0, 0.2);
   padding-top: 64px;
     margin-bottom: 32px;
@@ -1166,6 +1167,8 @@ app-drawer-layout:not(.narrow) app-drawer app-toolbar {
     bottom: 16px;
     width: 96px;
     height: 96px;
+    margin-left: -48px;
+    color: white;
 }
 
 /* Services section */
