--- a/res/css/styles.scss
+++ b/res/css/styles.scss
@@ -142,6 +142,7 @@ app-drawer-layout {
     background-size: cover;
     min-height: 600px;
     height: 100vh;
+    box-sizing: border-box;
     box-shadow: inset 0 -8px 10px 1px rgba($color-black, .14),
     inset 0 -3px 14px 2px rgba($color-black, .12),
     inset 0 -5px 5px -3px rgba($color-black, .2);
@@ -170,6 +171,8 @@ app-drawer-layout {
         bottom: 16px;
         width: 96px;
         height: 96px;
+        margin-left: -48px;
+        color: $text-color-primary-inverse;
     }
 }
 
