--- a/res/css/styles.css
+++ b/res/css/styles.css
@@ -1106,7 +1106,7 @@ app-drawer-layout app-header-layout app-header {
       line-height: 1;
       letter-spacing: 0;
       min-width: 0;
-        font-size: 18px !important;
+      font-size: 18px !important;
     }
     app-drawer-layout app-header-layout app-header app-toolbar paper-icon-button {
       position: relative;
@@ -1125,16 +1125,24 @@ app-drawer-layout app-drawer {
   app-drawer-layout app-drawer .narrow paper-button, app-drawer-layout app-drawer .narrow paper-icon-button {
     display: none; }
 app-drawer-layout.narrow app-header-layout app-header app-toolbar paper-button, app-drawer-layout.narrow app-header-layout app-header app-toolbar paper-icon-button:not([drawer-toggle]) {
-    display: none;
+  display: none;
 }
 app-drawer-layout:not(.narrow) app-drawer app-toolbar {
-    display: none;
+  display: none;
 }
 
 .page-index app-drawer-layout app-header-layout app-header {
   background-color: rgba(33, 33, 33, 0.12); }
   .page-index app-drawer-layout app-header-layout app-header #backgroundRearLayer {
     background: #212121; }
+
+.page-index app-drawer-layout app-header-layout app-header [main-title] {
+  transition: 0.3s opacity ease;
+}
+
+.page-index app-drawer-layout app-header-layout app-header:not([shadow]) {
+  opacity: 0;
+}
 
 /* Cover */
 .cover {
@@ -1143,18 +1151,16 @@ app-drawer-layout:not(.narrow) app-drawer app-toolbar {
   background-size: cover;
   min-height: 600px;
   height: 100vh;
-    box-sizing: border-box;
   box-shadow: inset 0 -8px 10px 1px rgba(0, 0, 0, 0.14), inset 0 -3px 14px 2px rgba(0, 0, 0, 0.12), inset 0 -5px 5px -3px rgba(0, 0, 0, 0.2);
-  padding-top: 64px;
-    margin-bottom: 32px;
-    text-align: center;
+  margin-bottom: 32px;
+  text-align: center;
 }
   .cover .cover-inner {
     position: absolute;
     top: 50%;
     width: 100%;
     transform: translateY(-50%);
-      color: rgba(255, 255, 255, 0.7);
+    color: rgba(255, 255, 255, 0.7);
   }
 
 .cover .cover-inner h1, .cover .cover-inner paper-button {
@@ -1169,11 +1175,16 @@ app-drawer-layout:not(.narrow) app-drawer app-toolbar {
     height: 96px;
     margin-left: -48px;
     color: rgba(255, 255, 255, 0.7);
-    transition: 0.3s color ease;
+  transition: 0.3s color ease;
 }
 
 .cover paper-icon-button:hover {
-    color: white;
+  color: white;
+}
+
+.cover paper-icon-button iron-icon {
+  position: relative;
+  top: 4px;
 }
 
 /* Services section */
