--- a/res/css/styles.scss
+++ b/res/css/styles.scss
@@ -130,6 +130,13 @@ app-drawer-layout {
                 #backgroundRearLayer {
                     background: $color-primary;
                 }
+
+                [main-title] {
+                    transition: 0.3s opacity ease;
+                }
+                &:not([shadow]) {
+                    opacity: 0;
+                }
             }
         }
     }
@@ -142,11 +149,9 @@ app-drawer-layout {
     background-size: cover;
     min-height: 600px;
     height: 100vh;
-    box-sizing: border-box;
     box-shadow: inset 0 -8px 10px 1px rgba($color-black, .14),
     inset 0 -3px 14px 2px rgba($color-black, .12),
     inset 0 -5px 5px -3px rgba($color-black, .2);
-    padding-top: 64px;
     margin-bottom: 32px;
     text-align: center;
 
@@ -177,6 +182,11 @@ app-drawer-layout {
 
         &:hover {
             color: $text-color-primary-inverse;
+        }
+
+        iron-icon {
+            position: relative;
+            top: 4px;
         }
     }
 }
